--- a/src/components/Game.css
+++ b/src/components/Game.css
@@ -5,3 +5,9 @@ h1 {
 .game-element {
   text-align: center;
 }
+
+.new-game-button {
+  border: 1px solid black;
+  font-size: 42px;
+  padding: 10px
+}
